--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mantine/notifications": "^7.15.1",
     "@mantine/nprogress": "^7.15.1",
     "@shopify/admin-api-client": "^1.0.4",
+    "@tabler/icons-react": "^3.26.0",
+    "clsx": "^2.1.1",
     "next": "15.1.0",
     "postcss": "^8.4.49",
     "postcss-flexbugs-fixes": "^5.0.2",
