--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mantine/nprogress": "^7.15.1",
     "@shopify/admin-api-client": "^1.0.4",
     "@tabler/icons-react": "^3.26.0",
+    "@tanstack/react-query": "^5.62.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "next": "15.1.0",
     "postcss": "^8.4.49",
     "postcss-flexbugs-fixes": "^5.0.2",
