task: showing products

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass-embedded": "^1.83.0"
   },
   "devDependencies": {
     "@types/node": "^20",
