--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-to-print": "^3.0.2",
     "sass-embedded": "^1.83.0"
   },
   "devDependencies": {
