--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@shopify/admin-api-client": "^1.0.4",
     "@tabler/icons-react": "^3.26.0",
     "@tanstack/react-query": "^5.62.7",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
@@ -29,6 +30,7 @@
     "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "sass-embedded": "^1.83.0"
   },
   "devDependencies": {
