--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,15 @@
 SHOPIFY_URL=
 SHOPIFY_TOKEN=
 SHOPIFY_PROVIDER_LOCATION_ID=
+
+# Shopify OAuth (pour connecter de nouvelles boutiques)
+SHOPIFY_CLIENT_ID=
+SHOPIFY_CLIENT_SECRET=
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
+
+# App URL (pour OAuth callback)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
