--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/notifications": "^7.15.1",
     "@mantine/nprogress": "^7.15.1",
     "@shopify/admin-api-client": "^1.0.4",
+    "@supabase/supabase-js": "^2.90.1",
     "@tabler/icons-react": "^3.26.0",
     "@tanstack/react-query": "^5.62.7",
     "buffer": "^6.0.3",
